fixed rounding errors and overflow-x on products flex

--- a/store.css
+++ b/store.css
@@ -621,6 +621,7 @@ button.cart {
   transform: translate(-50%);
   left: 50%;
   overflow-y: scroll;
+  overflow-x: hidden;
   /*TODO Do some magic to make it scrollable */
 }
 
